--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 ROOT_EMAIL=admin@example.com
-ROOT_PASSWORD=admin
+ROOT_PASSWORD=CHANGEME
 API_KEYS=abcdef
 AWS_BUCKET=stg-quintype-dropbox
 AWS_REGION=us-east-1
